resourcelimtstest.yaml
apiVersion: v1
kind: Pod
metadata:
  name: resource-limits-test-pod 
  namespace: rbactest
spec:
  containers: 
  - name: nginx
    image: nginx:19-alpine
