app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitness-tracker-app
  namespace: rbactest
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: fitness-tracker-app
  template:
    metadata:
      labels:
        app: fitness-tracker-app
      annotations:
        ad.datadoghq.com/fitness-tracker-app.logs: >-
          [{"source":"nodejs","service":"fitness-tracker-service"},
           {"source":"nodejs","service":"fitness-tracker-app"}]
    spec:
      # nodeSelector:
      #   training: "devops"
      affinity:
        # nodeAffinity:
        #   requiredDuringSchedulingIgnoredDuringExecution:
        #     nodeSelectorTerms:
        #     - matchExpressions:
        #       - key: training
        #         operator: In
        #         values:
        #         - devops
        #   preferredDuringSchedulingIgnoredDuringExecution:
        #   - weight: 1
        #     preference:
        #       matchExpressions:
        #       - key: training
        #         operator: NotIn
        #         values:
        #         - test
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app: fitness-tracker-app
              topologyKey: "kubernetes.io/hostname"
        tolerations:
        - key: "training"
          operator: "Equal"
          value: "test"
          effect: "NoSchedule"
      containers:
        - name: fitness-tracker-app
          image: pulkit197/fitness_tracker-master-copy3-fitness-app:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "200m"
---

apiVersion: v1
kind: Service
metadata:
  name: fitness-tracker-service
  namespace: rbactest
spec:
  selector:
    app: fitness-tracker-app
  ports:
  - port: 80
    targetPort: 5000
  type: LoadBalancer
