constraint-replicas.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRollingUpdate
metadata:
  name: enforce-rolling-update
spec:
  match:
    excludedNamespaces:
    - kube-system
    - gatekeeper-system
    - kyverno
    - kube-public
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sMinReplicas
metadata:
  name: enforce-min-replicas
spec:
  match:
    excludedNamespaces:
    - kube-system
    - gatekeeper-system
    - kyverno
    - kube-public
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
