kyverno-imagetag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: Enforce
  rules:
  - name: check-image-tag
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Using latest tag is not allowed"
      pattern:
        spec:
          containers:
          - image: "!*:latest"
