template-imagetag.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredimagetag
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredImageTag
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8srequiredimagetag

      violation[{"msg": msg}] {
        containers := input.review.object.spec.template.spec.containers
        container := containers[_]
        endswith(container.image, ":latest")
        msg := "Using latest tag is not allowed"
      }
