template-resourcelimits.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sresourcelimits
spec:
  crd:
    spec:
      names:
        kind: K8sResourceLimits
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8sresourcelimits

      violation[{"msg": msg}] {
        containers := input.review.object.spec.template.spec.containers
        container := containers[_]

        not container.resources
        msg := sprintf("Container '%v' must define resources", [container.name])
      }

      violation[{"msg": msg}] {
        containers := input.review.object.spec.template.spec.containers
        container := containers[_]

        not container.resources.limits
        msg := sprintf("Container '%v' must define resource limits", [container.name])
      }

      violation[{"msg": msg}] {
        containers := input.review.object.spec.template.spec.containers
        container := containers[_]

        not container.resources.requests
        msg := sprintf("Container '%v' must define resource requests", [container.name])
      }
